--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Jogo da Velha</h1>
-    <div id="bottons-container">
+    <div id="buttons-container">
             <button id="2-players">2 Jogadores</button>
             <button id="ai-player">Contra IA</button>
     </div>
@@ -25,24 +25,25 @@
         <div class="box" id="block-9"></div>
         
         <div id="scoreboard-container">
+            <h2>PLACAR</h2>
             <span class="score-box">
                 <span id="x-scoreboard">X</span>
-                <span id="scoreboard-1">0</span>
+                <span id="scoreboard-1">: 0</span>
             </span>
             <span class="score-box">
                 <span id="o-scoreboard"></span>
-                <span id="scoreboard-2">0</span>
+                <span id="scoreboard-2">: 0</span>
             </span>
         </div>
 
-        <div class="hide">
-            <div class="x">X</div>
-            <div class="o"></div>
-        </div>
-
         <div id="message" class="hide">
-            <p></p>
+            <p>asd</p>
         </div>
+    </div>
+    
+    <div class="hide">
+        <div class="x">X</div>
+        <div class="o"></div>
     </div>
 
     <div id="message" class="hide"></div>
